--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -9,24 +9,26 @@
   .header-banner {
     background-color: #2b1810;
     border: 2px solid #ff0000;
-    padding: 10px;
+    padding: 0px;
     box-sizing: border-box;
   }
   
   .header-banner img {
     width: 100%;
-    max-width: 800px;
+    max-width:100%;
+    height: 190px;
     display: block;
     margin: 0 auto;
+    padding: 0;
   }
   
   .nav-bar {
     background-color: #ffa500;
-    margin: 20px auto;
+    margin: 0px auto;
     padding: 15px;
-    border-radius: 25px;
-    width: 90%;
-    max-width: 800px;
+    border-radius: 20px;
+    width: 100%;
+    max-width: 1400px;
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -37,11 +39,13 @@
     color: black;
     text-decoration: none;
     font-weight: bold;
-    font-size: 20px;
-    padding: 0 15px;
+    font-size: 30px;
+    padding: 0 10px;
   }
   
   .divider {
     color: black;
     font-weight: bold;
+    font-size:x-large;
+
   }
