--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -21,28 +21,30 @@
   .form-content {
     flex: 1;
     margin-top: 20px;
+    margin-left: 0px;
   }
-  
   .form-group {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
   }
   
-  .form-group label {
+.form-group label {
     font-size: 24px;
     font-weight: bold;
     min-width: 180px;
+    text-align: center;
+    font-size: x-large;
   }
   
   .form-group input {
-    flex: 1;
-    width: 300px;
+    color: red;
+    width: 400px;
     padding: 12px;
     border: 3px solid black;
     border-radius: 15px;
     font-weight:bolder;
-    font-size: 18px;
+    font-size: 24px;
     height: max-content;
   }
   
@@ -51,11 +53,11 @@
     color: white;
     border: none;
     padding: 12px 50px;
-    border-radius: 5px;
+    border-radius: 15px;
     font-size: 20px;
     display: block;
-    margin: 20px auto;
+    margin-top: 60px;
     cursor: pointer;
     display: block;
-    margin: 30px auto 0;
+    margin-left: 300px;
   }
