--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -35,12 +35,12 @@
     align-items: center;
   }
   
-  .nav-bar Link {
+  .nav-bar a {
     color: black;
     text-decoration: none;
     font-weight: bold;
     font-size: 30px;
-    padding: 0 10px;
+    padding: 0 15px;
   }
   
   .divider {
