--- a/frontend/src/components/Dashboards/Employee/Employeedashboard.css
+++ b/frontend/src/components/Dashboards/Employee/Employeedashboard.css
@@ -5,40 +5,48 @@
     margin: 0 auto;
   }
   
-  .user-info {
+  .header-section {
     display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 30px;
+    gap: 30px;
+    margin-bottom: 40px;
+  }
+  
+  .logo-section {
+    flex-shrink: 0;
   }
   
   .dashboard-college-logo {
     width: 100px;
     height: auto;
+
+  }
+  
+  .info-section {
+    flex-grow: 1;
   }
   
   .emp-details {
+    margin-bottom: 20px;
     font-size: 18px;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-
+    margin-top: 0%;
+    margin-bottom: 0px;
   }
   
   .exam-info {
     background-color: #e5e2a5;
     padding: 15px;
-    text-align: center;
     border-radius: 5px;
-    margin-bottom: 30px;
+    height: 100px;
   }
   
   .download-section {
     text-align: center;
+    margin-top: 30px;
   }
   
   .download-btn {
@@ -46,8 +54,4 @@
     border: none;
     cursor: pointer;
     padding: 10px;
-  }
-  
-  .download-btn:hover {
-    transform: scale(1.1);
   }
